API_GATEWAY Copleted
